Prior To Implementing Collection View Controller

--- a/Revels'18/Base.lproj/Main.storyboard
+++ b/Revels'18/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <capability name="Navigation items with more than one left or right bar item" minToolsVersion="7.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -145,11 +146,13 @@
         <!--Home-->
         <scene sceneID="bL9-d9-3oD">
             <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="t7B-36-8uI" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <tableViewController id="Lxw-PB-aC9" customClass="HomePage" customModule="Revels_18" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="MUE-sl-zIu">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="sectionIndexBackgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="HomeCell" rowHeight="110" id="GxZ-kv-nkq" customClass="HomeViewCell" customModule="Revels_18" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="28" width="320" height="110"/>
@@ -201,12 +204,23 @@
                             <outlet property="delegate" destination="Lxw-PB-aC9" id="yn3-Hm-Tb9"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Home" id="W0a-YF-iqC"/>
+                    <navigationItem key="navigationItem" title="Home" id="W0a-YF-iqC">
+                        <barButtonItem key="leftBarButtonItem" title="Item" image="Add-User" id="8ee-ai-YKx">
+                            <color key="tintColor" name="systemPinkColor" catalog="System" colorSpace="catalog"/>
+                        </barButtonItem>
+                        <rightBarButtonItems>
+                            <barButtonItem title="Item" image="More" id="uR3-B2-AJO">
+                                <color key="tintColor" name="systemPinkColor" catalog="System" colorSpace="catalog"/>
+                            </barButtonItem>
+                            <barButtonItem title="Item" image="Favorites" id="FrY-0s-YfF">
+                                <color key="tintColor" name="systemPinkColor" catalog="System" colorSpace="catalog"/>
+                            </barButtonItem>
+                        </rightBarButtonItems>
+                    </navigationItem>
                     <connections>
                         <outlet property="navigationBar" destination="W0a-YF-iqC" id="dKz-5z-ZnB"/>
                     </connections>
                 </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="t7B-36-8uI" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2867" y="652"/>
         </scene>
@@ -300,7 +314,41 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="sES-Xg-iCC" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2034" y="-248"/>
+            <point key="canvasLocation" x="2014" y="-139"/>
+        </scene>
+        <!--Collection View Controller-->
+        <scene sceneID="rUH-Ib-PeD">
+            <objects>
+                <collectionViewController id="1Mv-Cz-ZaE" sceneMemberID="viewController">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="Ukw-2D-N64">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="gQg-CX-SN4">
+                            <size key="itemSize" width="50" height="50"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </collectionViewFlowLayout>
+                        <cells>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="03Q-KZ-OZ1">
+                                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                    <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </view>
+                            </collectionViewCell>
+                        </cells>
+                        <connections>
+                            <outlet property="dataSource" destination="1Mv-Cz-ZaE" id="Him-7l-7hI"/>
+                            <outlet property="delegate" destination="1Mv-Cz-ZaE" id="kzd-Aw-Yyh"/>
+                        </connections>
+                    </collectionView>
+                </collectionViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="C7b-jm-EcJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2867" y="-139"/>
         </scene>
         <!--Revels Home Page-->
         <scene sceneID="Fk3-Q2-5hw">
@@ -465,9 +513,12 @@
         </scene>
     </scenes>
     <resources>
+        <image name="Add-User" width="30" height="30"/>
         <image name="Calendar" width="30" height="30"/>
         <image name="Categories" width="30" height="30"/>
+        <image name="Favorites" width="30" height="30"/>
         <image name="Home" width="30" height="30"/>
+        <image name="More" width="30" height="30"/>
         <image name="Results" width="30" height="30"/>
         <image name="Trophy" width="30" height="30"/>
     </resources>
