--- a/Revels'18/Base.lproj/Main.storyboard
+++ b/Revels'18/Base.lproj/Main.storyboard
@@ -58,7 +58,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="u79-lC-9dF">
-                                <rect key="frame" x="57" y="514" width="206" height="34"/>
+                                <rect key="frame" x="54" y="514" width="212" height="34"/>
                                 <color key="backgroundColor" name="alternateSelectedControlColor" catalog="System" colorSpace="catalog"/>
                                 <state key="normal" title="Continue">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -70,9 +70,9 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="0.44030570000000002" blue="0.4797278962" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
-                            <constraint firstItem="dsP-bf-tb3" firstAttribute="bottom" secondItem="u79-lC-9dF" secondAttribute="bottom" constant="20" id="GAR-FY-o58"/>
-                            <constraint firstItem="dsP-bf-tb3" firstAttribute="trailing" secondItem="u79-lC-9dF" secondAttribute="trailing" constant="57" id="R5b-Ay-tmp"/>
-                            <constraint firstItem="u79-lC-9dF" firstAttribute="leading" secondItem="dsP-bf-tb3" secondAttribute="leading" constant="57" id="Sez-fq-Tpv"/>
+                            <constraint firstItem="dsP-bf-tb3" firstAttribute="bottom" secondItem="u79-lC-9dF" secondAttribute="bottom" constant="20" id="1jG-Wa-O0p"/>
+                            <constraint firstItem="u79-lC-9dF" firstAttribute="leading" secondItem="dsP-bf-tb3" secondAttribute="leading" constant="54" id="XNW-jN-7ku"/>
+                            <constraint firstItem="dsP-bf-tb3" firstAttribute="trailing" secondItem="u79-lC-9dF" secondAttribute="trailing" constant="54" id="mun-Cr-nAM"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="dsP-bf-tb3"/>
                     </view>
@@ -83,7 +83,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ome-cI-qKO" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="149.59999999999999" y="658.92053973013503"/>
+            <point key="canvasLocation" x="148.125" y="658.09859154929575"/>
         </scene>
         <!--Categories-->
         <scene sceneID="uEQ-Hb-2Xk">
@@ -100,7 +100,7 @@
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                         <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CategoriesCell" id="lvi-3H-8UG">
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" misplaced="YES" reuseIdentifier="CategoriesCell" id="lvi-3H-8UG">
                                 <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
@@ -181,34 +181,13 @@
                                         <rect key="frame" x="0.0" y="10" width="316" height="489"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <prototypes>
-                                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" accessoryType="detailButton" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ScheduleCell" id="63V-AL-XNA" customClass="ScheduleCell" customModule="Revels_18" customModuleProvider="target">
+                                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="ZGh-zP-nD9" customClass="ScheduleCell" customModule="Revels_18" customModuleProvider="target">
                                                 <rect key="frame" x="0.0" y="28" width="316" height="65"/>
                                                 <autoresizingMask key="autoresizingMask"/>
-                                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="63V-AL-XNA" id="MU5-f0-MFn">
-                                                    <rect key="frame" x="0.0" y="0.0" width="269" height="64.5"/>
+                                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="ZGh-zP-nD9" id="tBt-lG-gh2">
+                                                    <rect key="frame" x="0.0" y="0.0" width="316" height="64.5"/>
                                                     <autoresizingMask key="autoresizingMask"/>
-                                                    <subviews>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fGb-Ps-6td">
-                                                            <rect key="frame" x="8" y="0.0" width="324" height="40"/>
-                                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="25"/>
-                                                            <nil key="textColor"/>
-                                                            <nil key="highlightedColor"/>
-                                                        </label>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Jg-0Q-UXy">
-                                                            <rect key="frame" x="8" y="38" width="341" height="21"/>
-                                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                            <nil key="textColor"/>
-                                                            <nil key="highlightedColor"/>
-                                                        </label>
-                                                    </subviews>
                                                 </tableViewCellContentView>
-                                                <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                                                <connections>
-                                                    <outlet property="categoryLabel" destination="5Jg-0Q-UXy" id="vWL-yq-Mbh"/>
-                                                    <outlet property="eventName" destination="fGb-Ps-6td" id="vC2-Ym-onZ"/>
-                                                </connections>
                                             </tableViewCell>
                                         </prototypes>
                                     </tableView>
@@ -383,7 +362,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qyY-9o-3nd" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3765" y="730"/>
+            <point key="canvasLocation" x="4748" y="656"/>
         </scene>
         <!--Revels Cup-->
         <scene sceneID="0vV-6w-rkb">
@@ -428,7 +407,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zaQ-Lw-LsY" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="945" y="1500"/>
+            <point key="canvasLocation" x="2061" y="2359"/>
         </scene>
         <!--About Revels Page-->
         <scene sceneID="T0J-u3-FlJ">
@@ -479,7 +458,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="yCy-83-06f" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3765" y="1430"/>
+            <point key="canvasLocation" x="3953" y="656"/>
         </scene>
         <!--Home-->
         <scene sceneID="Qsu-fT-MNZ">
