--- a/Revels'18/Base.lproj/Main.storyboard
+++ b/Revels'18/Base.lproj/Main.storyboard
@@ -135,8 +135,8 @@
                         <segue destination="M4t-1b-ue4" kind="relationship" relationship="viewControllers" id="vaP-FJ-bz7"/>
                         <segue destination="D5V-JN-PUo" kind="relationship" relationship="viewControllers" id="PQE-BL-UhP"/>
                         <segue destination="JTw-T7-5FA" kind="relationship" relationship="viewControllers" id="maf-VP-sHI"/>
-                        <segue destination="caD-AB-fvG" kind="relationship" relationship="viewControllers" id="jge-z8-fM9"/>
                         <segue destination="ugJ-lW-9zf" kind="relationship" relationship="viewControllers" id="H4r-pX-qd8"/>
+                        <segue destination="xIu-Sw-bQB" kind="relationship" relationship="viewControllers" id="gsD-bk-nWz"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="muX-7V-WtI" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -394,21 +394,88 @@
             </objects>
             <point key="canvasLocation" x="2062" y="1499"/>
         </scene>
-        <!--Results-->
-        <scene sceneID="E5v-Ot-aTN">
+        <!--Home-->
+        <scene sceneID="nBY-MG-hDx">
             <objects>
-                <viewController id="caD-AB-fvG" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="FPG-dx-zVJ">
+                <viewController id="VZ6-lW-AnH" customClass="ResultsPage" customModule="Revels_18" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="hJ9-Ra-DOP">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="519"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xz8-FQ-6gJ">
+                                <rect key="frame" x="0.0" y="64" width="320" height="40"/>
+                                <subviews>
+                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="8x7-Em-sMg">
+                                        <rect key="frame" x="8" y="5" width="304" height="29"/>
+                                        <segments>
+                                            <segment title="First"/>
+                                            <segment title="Second"/>
+                                        </segments>
+                                    </segmentedControl>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="UAF-md-j71"/>
+                                    <constraint firstItem="8x7-Em-sMg" firstAttribute="leading" secondItem="xz8-FQ-6gJ" secondAttribute="leading" constant="8" id="Umk-hn-Sls"/>
+                                    <constraint firstItem="8x7-Em-sMg" firstAttribute="top" secondItem="xz8-FQ-6gJ" secondAttribute="top" constant="5" id="eGY-lE-OlH"/>
+                                    <constraint firstAttribute="trailing" secondItem="8x7-Em-sMg" secondAttribute="trailing" constant="8" id="f13-Xi-8Zn"/>
+                                </constraints>
+                            </view>
+                            <searchBar contentMode="redraw" searchBarStyle="minimal" translatesAutoresizingMaskIntoConstraints="NO" id="Jbf-ZA-grg">
+                                <rect key="frame" x="0.0" y="104" width="320" height="56"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </searchBar>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="UQN-86-xpA">
+                                <rect key="frame" x="0.0" y="160" width="320" height="359"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="GnC-fi-pUe">
+                                    <size key="itemSize" width="50" height="50"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="rDp-x0-Urf">
+                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </view>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <viewLayoutGuide key="safeArea" id="lyC-rO-lUb"/>
+                        <constraints>
+                            <constraint firstItem="Jbf-ZA-grg" firstAttribute="trailing" secondItem="BZ7-gL-m7m" secondAttribute="trailing" id="43h-bR-cdu"/>
+                            <constraint firstItem="xz8-FQ-6gJ" firstAttribute="leading" secondItem="BZ7-gL-m7m" secondAttribute="leading" id="4vi-pb-R8t"/>
+                            <constraint firstItem="Jbf-ZA-grg" firstAttribute="leading" secondItem="BZ7-gL-m7m" secondAttribute="leading" id="CW6-nJ-BXt"/>
+                            <constraint firstItem="xz8-FQ-6gJ" firstAttribute="top" secondItem="BZ7-gL-m7m" secondAttribute="top" id="OZh-kj-n9z"/>
+                            <constraint firstItem="xz8-FQ-6gJ" firstAttribute="trailing" secondItem="BZ7-gL-m7m" secondAttribute="trailing" id="azM-4Q-Db1"/>
+                            <constraint firstItem="Jbf-ZA-grg" firstAttribute="top" secondItem="xz8-FQ-6gJ" secondAttribute="bottom" id="iIB-yj-Uff"/>
+                            <constraint firstItem="xz8-FQ-6gJ" firstAttribute="trailing" secondItem="BZ7-gL-m7m" secondAttribute="trailing" id="w1n-na-HOo"/>
+                            <constraint firstItem="xz8-FQ-6gJ" firstAttribute="leading" secondItem="BZ7-gL-m7m" secondAttribute="leading" id="wBb-QS-2jz"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="BZ7-gL-m7m"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Results" image="Results" id="Cb0-t5-ZgG"/>
+                    <navigationItem key="navigationItem" title="Home" id="7y0-dd-lA7">
+                        <barButtonItem key="leftBarButtonItem" systemItem="refresh" id="rkD-fF-Hng">
+                            <color key="tintColor" name="systemPinkColor" catalog="System" colorSpace="catalog"/>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" title="Item" image="More" style="plain" id="yax-V8-kUg">
+                            <color key="tintColor" name="systemPinkColor" catalog="System" colorSpace="catalog"/>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="segmentControl" destination="8x7-Em-sMg" id="fiR-mr-YKD"/>
+                        <outlet property="segmentView" destination="xz8-FQ-6gJ" id="078-w2-dfe"/>
+                    </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="zaQ-Lw-LsY" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="y1z-mp-maC" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2061" y="2356"/>
+            <point key="canvasLocation" x="2060.625" y="2340.8450704225352"/>
         </scene>
         <!--About Revels Page-->
         <scene sceneID="T0J-u3-FlJ">
@@ -464,13 +531,16 @@
         <!--Home-->
         <scene sceneID="Qsu-fT-MNZ">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="psp-cC-Zi3" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="M4t-1b-ue4" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Home" image="Home" id="Sat-RL-dpp"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="23M-hh-Fsp">
                         <rect key="frame" x="0.0" y="20" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <textAttributes key="titleTextAttributes">
+                            <color key="textColor" name="systemPinkColor" catalog="System" colorSpace="catalog"/>
+                        </textAttributes>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <toolbar key="toolbar" opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="dSZ-Ww-ape">
@@ -480,8 +550,32 @@
                         <segue destination="MEb-MX-0xR" kind="relationship" relationship="rootViewController" id="RaD-CL-qvm"/>
                     </connections>
                 </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="psp-cC-Zi3" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2014" y="658"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="wy5-4e-BOB">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="xIu-Sw-bQB" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="aZ8-yM-1Ur"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="gz7-7K-mVk">
+                        <rect key="frame" x="0.0" y="20" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <textAttributes key="titleTextAttributes">
+                            <color key="textColor" name="systemPinkColor" catalog="System" colorSpace="catalog"/>
+                        </textAttributes>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="VZ6-lW-AnH" kind="relationship" relationship="rootViewController" id="h8Q-74-zp7"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="yVc-xb-u3t" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1071" y="2341"/>
         </scene>
     </scenes>
     <resources>
@@ -491,7 +585,6 @@
         <image name="Favorites" width="30" height="30"/>
         <image name="Home" width="30" height="30"/>
         <image name="More" width="30" height="30"/>
-        <image name="Results" width="30" height="30"/>
         <image name="Trophy" width="30" height="30"/>
     </resources>
 </document>
